--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
     <head>
-        
+        <h1>Viss saturs</h1>
     </head>
     <body>
-
+        <p>saturs</p>
     </body>
 </html>
