--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
     <head>
-        <h1>Viss saturs</h1>
+        <div>
+            <h1>Viss saturs</h1>
+        </div>
+        
     </head>
     <body>
-        <p>saturs</p>
+        <div><p>saturs</p>
+        </div>
     </body>
 </html>
