--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
     <head>
         <div>
+{% block virsraksts %}
             <h1>Viss saturs</h1>
+{% endblock %}
+            <a href="/">Saturs</a>
+            <a href="/login">Login</a>
+            <a href="/pievienot">Pievieno saiti</a>
         </div>
-        
+
     </head>
     <body>
+{% block saturs %}
         <div><p>saturs</p>
         </div>
+{% endblock %}
     </body>
 </html>
